--- a/src/styles/partials/_prevProjects.scss
+++ b/src/styles/partials/_prevProjects.scss
@@ -7,6 +7,7 @@
     margin-top: 0;
     &-small {
       color: $blue;
+      margin: 0;
     }
   }
   &__image {
@@ -79,7 +80,7 @@
       &-svg {
         width: 40px;
         height: 40px;
-        margin: 0 10px;
+        margin: 0 30px;
       }
       a {
         height: 100px;
@@ -108,8 +109,8 @@
         color: $blue;
 
         &:hover {
-          padding-top: 1px;
-          transform: scale(1.2);
+          padding-top: 0;
+          transform: scale(1.1);
           filter: unset;
         }
       }
